# seraEngine

./: CMakeLists.txt  main.cpp  readme.md  todo.txt
include/: sfmlheaders.h
include/Core/: Core.h  Game.h  Object2D.h  PhysicsWorld.h
include/Math/: Line2.h  Line3.h  Mat2.h  Mat3.h  Math.h  Point2.h  Point3.h  Polygon.h  Quaternion.h  Vector2.h  Vector3.h
include/Physics2D/Collider/: Collider.h
include/Physics2D/Primitives/: AABB.h  Circle.h
include/Physics2D/RigidBody/: RigidBody.h
include/Renderer/: Window.h
include/ResourceManager/: ResourceManager.h
include/Utils/: Log.h  Timer.h
src/Core/: Game.cpp  Object.cpp
src/Math/: Quaternion.cpp  Vector2.cpp  Vector3.cpp
src/Physics2D/Collider/: Collider.cpp
src/Physics2D/Primitives/: AABB.cpp  Circle.cpp
src/Physics2D/RigidBody/: RigidBody.cpp
src/Utils/: Log.cpp  Timer.cpp
test/: testLog.cpp  testTimer.cpp  testVector2.cpp  testVector3.cpp
test/playground/: CMakeLists.txt
test/playground/particle/: particle.cpp
test/sfmlWindow/: testSfmlWindow.cpp
